assets/css/easyadmin-theme/forms.css
/* ... */
.form-fieldset-header .form-fieldset-title {
    flex: 1;
}
.form-fieldset-header .form-fieldset-title .form-fieldset-title-content {
    align-items: center;
    box-shadow: 0 1px 0 var(--form-fieldset-header-border-color);
    display: flex;
    color: var(--form-fieldset-header-color);
    font-size: 17px;
    font-weight: bold;
    padding: 0 0 5px;
}
.form-fieldset-header .form-fieldset-title .form-fieldset-title-content.not-collapsible {
    cursor: default;
}
.form-fieldset-header .form-fieldset-title .form-fieldset-title-content.collapsed .form-fieldset-collapse-marker {
    transform: rotate(0deg);
}
.form-fieldset-header .form-fieldset-title .form-fieldset-title-content .collapsible::after {
    content: "";
    position: absolute;
    inline-size: 100%;
    block-size: 100%;
    inset-block-start: 0;
    inset-inline-start: 0;
}

.form-fieldset-header .form-fieldset-title .form-fieldset-icon {
    color: var(--form-fieldset-icon-color);
    margin-inline-end: 10px;
}

.form-fieldset-header .form-fieldset-title .form-fieldset-help {
    color: var(--form-fieldset-help-color);
    margin-block-start: 6px;
}

/* using CSS Grid is needed for a smooth collapse animation */
.form-fieldset-body {
    display: grid;
    grid-template-rows: 1fr;
    transition: grid-template-rows 0.2s ease-out;
    overflow: clip;
}

.form-fieldset-body.collapse:not(.show) {
    display: grid;
    grid-template-rows: 0fr;
}

.form-fieldset-body.collapsing {
    display: grid;
    block-size: auto !important;
    overflow: clip;
}

.form-fieldset-body > .row {
    min-block-size: 0;
    overflow: clip;
}

/* allow contents (e.g. dropdowns) to overflow when fieldset is expanded */
.form-fieldset-body.show:not(.collapsing),
.form-fieldset-body.show:not(.collapsing) > .row {
    overflow: visible;
}

@media (prefers-reduced-motion: reduce) {
    .form-fieldset-body,
    .form-column .form-fieldset-header,
    .form-fieldset-header .form-fieldset-collapse-marker {
        transition-duration: 0.01ms !important;
    }
}

/* Form actions ("Save changes", "Delete", etc.) */
.form-actions {
    display: flex;
    justify-content: flex-end;
    padding: 0;
}
.form-actions .btn {
    margin-inline-start: 10px;
}

/* Form errors */
.has-error .form-help,
.has-error .control-label,
.has-error .radio,
.has-error .checkbox,
.has-error .radio-inline,
.has-error .checkbox-inline,
.has-error.radio label,
.has-error.checkbox label,
.has-error.radio-inline label,
.has-error.checkbox-inline label {
    color: var(--form-help-error-color);
}

.has-error .form-widget input.form-control,
.has-error .form-widget textarea.form-control,
.has-error .form-widget .form-select,
.has-error .form-widget input.form-check-input,
.has-error .ea-fileupload .input-group,
.has-error .btn.input-file-container,
.has-error .CodeMirror,
.has-error.ea-text-editor-wrapper,
.has-error.form-group .ea-text-editor-wrapper {
    border-color: var(--form-input-error-border-color);
    box-shadow: var(--form-input-error-shadow);
}
.form-group.has-error label,
.form-group.has-error legend {
    color: var(--form-input-error-legend-color);
}

.has-error .ea-fileupload .input-group {
    border-radius: var(--border-radius);
}

.global-invalid-feedback {
    background: var(--form-global-error-bg);
    border: var(--form-global-error-border);
    border-radius: var(--border-radius);
    color: var(--form-global-error-color);
    font-size: 14px;
    margin: 5px 0;
    padding: 6px 12px;
}
form .invalid-feedback {
    color: var(--color-danger);
    font-size: 1em;
    font-weight: 500;
    padding-block-start: 6px;
}
.form-check-input.is-invalid ~ .form-check-label,
.was-validated .form-check-input:not([type="checkbox"]):invalid ~ .form-check-label {
    color: inherit;
}

form .invalid-feedback .badge-danger {
    font-size: 0.6875rem;
    margin-inline-end: 2px;
    padding: 3px 4px;
}
form .invalid-feedback > .d-block + .d-block {
    margin-block-start: 5px;
}

/* Form group inputs */
.input-group-text {
    background-color: var(--form-input-group-text-bg);
    border: 1px solid var(--form-input-group-text-border-color);
    box-shadow: var(--form-input-box-shadow);
    color: var(--form-input-text-color);
    block-size: 30px;
    padding: 3px 10px 5px;
}
.input-group button,
.input-group button:hover,
.input-group button:active,
.input-group button:focus {
    block-size: 28px;
    margin-block-start: 1px;
}

.input-group-append {
    margin-inline-start: 0;
}
.input-group-prepend {
    margin-inline-end: 0;
}

/* fileupload widgets */
.ea-fileupload .custom-file {
    block-size: 30px;
}
.ea-fileupload .input-group {
    flex-wrap: nowrap;
}
.ea-fileupload .input-group .btn,
.ea-fileupload .input-group .btn:hover {
    background: var(--form-input-group-text-bg);
    box-shadow: none !important;
    border-radius: 0;
    color: var(--text-color);
    font-size: 17px;
    block-size: 28px;
    line-height: 28px;
    margin: 0;
    padding: 0 8px;
    vertical-align: middle;
}
.ea-fileupload .input-group .btn:first-child,
.ea-fileupload .input-group .btn:hover:first-child {
    margin-inline-start: 5px;
}
.ea-fileupload .input-group .btn:last-child,
.ea-fileupload .input-group .btn:hover:last-child {
    border-start-end-radius: var(--border-radius);
    border-end-end-radius: var(--border-radius);
}

.ea-fileupload .custom-file-input {
    cursor: pointer;
    block-size: calc(1.5em + .75rem + 2px);
    margin: 0;
    overflow: hidden;
    opacity: 0;
    position: relative;
    inline-size: 100%;
    z-index: 2;
}
/* ... */

